Added some refs to course

--- a/hello.html
+++ b/hello.html
@@ -1,3 +1,4 @@
+# this project was created for Android sample Course
 <html>
 <head>
 </head>
@@ -5,5 +6,4 @@
 <h1> Hello, World! </h1>
 </body>
 </html>
-"future future"
 "it's my project"
